deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: django-todo
  name: django-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-todo
  template:
    metadata:
      labels:
        app: django-todo
    spec:
      containers:
        - image: django-todo:v1.0.0
          name: django-todo
          imagePullPolicy: Never
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "500m"
              memory: "256Mi"
